json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,54 @@
 {
  "items": [
   {
+    "id": "N_jMinD7Q-ekO-bS5rxUag",
+    "url": "https://jobmote.com/job/76356/ux-researcher-remote-consultant/",
+    "title": "UX Researcher (Remote Consultant)",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG:surround``remot W OR(career,first)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Theorem, LLC",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 19, 2019 10:07:51 PM",
+    "validThrough": "Sep 22, 2019 10:07:51 PM",
+    "crawled": "Sep 20, 2019 3:06:33 AM",
+    "content": "<div>This is a short term Freelancer role. Our Full Time Researcher role can be found on our careers page.Company OverviewFounded in 2007, Theorem (formerly Citrusbyte) is a technology consulting company with a focus on how we do the work as a means to achieve great results.Our customers, F1000's and startups alike, come to us because they need to change how something is done in order to succeed and they're looking for a solution that isn't just about technology - but also people, process and leadership. We consult, form a diverse team of experts, and deliver strategy and execution all under one roof.Our services range from new product development, pure R&amp;D, legacy modernization, pricing strategy development, revenue generation, process optimization, to organizational transformation and cultural design.Working at TheoremAt Theorem, we believe that creating an environment where great people can flourish is the best strategy for our business and the best way to solve our client's problems and deliver the greatest value.Our focus on culture is supported by our shared vision to build a company where we want to work for the long-term. We avoid egos and embrace distributed leadership. We grow from constantly being challenged and seek to understand when presented with ideas we don't understand. We respect each other, default to trust and treat each other like adults and we also hold each other accountable for commitments. There is a lot about our culture that makes us great and we're continually looking to improve it. Read what we've published about our culture.Job SummaryAs a UX Researcher you will lead early stage research activities that will serve as the building blocks for our product strategy and full team squad engagements. You are a curious person, have a strong sense of humility and deeply care about solving the right problem.Theorem works with Fortune 500 clients which requires a researcher who is a natural consultant that is comfortable presenting to and engaging with clients that range from stakeholders to C-Suite executives.This is a remote first role. Candidates within North America will be given priority for the sake of travel and team time zone alignment.Responsibilities And DutiesLead research for early stage discovery activitiesPlan, conduct, synthesize and communicate research findings to the internal team and our clientsDevelop an understanding of our client's business objectives and provide fresh insights of the problem space as experienced by the end userProduce clear and impactful artifacts that surface the most meaningful stories from the research findingsCoordinate recruiting, scheduling and communication with research participantsManage relationships with third-party research vendors when neededQualifications And Skills7+ years of product design research experienceSeasoned practitioner in both qualitative and quantitative research, with an appreciation for applying lean methodologies to processExperience with both generative and evaluative research initiativesDemonstrates expertise with preparation for and execution of interviewing, concept testing, usability testing, ethnographic research, diary studies, heuristic evaluations, surveys, personas, journey maps, remote testing and benchmarks<br>Example of your work output and artifacts are a requirement for the interview processWillingness to travelTheorem expects employees to be honest, trustworthy, and operate with integrity. Discrimination and all unlawful harassment (including sexual harassment) in employment is not tolerated. We encourage success based on our individual merits and abilities, and all decisions regarding recruitment, hiring, promotion, compensation, employee development decisions such as training, and all other terms and conditions of employment, will be made without regard to race, nationality, national origin, citizenship status, employment status, ethnicity, ethnic origin, color, creed, religion, belief, age, marital status, pregnancy, gender, gender identity, sexual preference, lifestyle, social class, military status, disability, physical features, or any other protected status. We oppose all forms of unlawful or unfair discrimination. Theorem is an equal opportunity employer.No statements by Theorem are intended to create an offer of employment unless made in a writing signed by an officer of the company and no offer shall become effective unless countersigned by the prospective employee.BE73WAMRNP</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "0YrubATETgG_ydgFQXwZXw",
     "url": "https://remote.co/job/pharmacist-2/",
     "title": "Pharmacist",
@@ -14241,54 +14289,6 @@
     }
   },
   {
-    "id": "fF_tEDztQCOByhWUheZdqA",
-    "url": "https://jobmote.com/job/53420/telecommute-healthcare-and-higher-education-executive-partner/",
-    "title": "Telecommute Healthcare and Higher Education Executive Partner",
-    "tags": [
-      "DBG:surround``3N(telecommut, posit) NOT fulltim",
-      "REMOTE1/50",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "50% remote",
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "VirtualVocations",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Jul 29, 2019 11:20:30 AM",
-    "validThrough": "Aug 1, 2019 11:20:30 AM",
-    "crawled": "Jul 29, 2019 4:06:25 PM",
-    "content": "<div>A research and advisory company has an open position for a Telecommute Healthcare and Higher Education Executive Partner.Core Responsibilities Include: Managing a portfolio of 30+ member relationshipsLeveraging subject matter expertise to create service solutions for clientsDefining and delivering innovative solutionsSkills and Requirements Include:Conduct on-site briefingsConsulting and/or CxO roles with 15+ years of progressive technology exposureExtensive knowledge of a CIO s focus areas</div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
     "id": "krIDyJLsTue6f1RWyyGa6Q",
     "url": "https://jobmote.com/job/53405/telecommute-game-mechanics-systems-designer/",
     "title": "Telecommute Game Mechanics Systems Designer",
@@ -15472,106 +15472,6 @@
     "validThrough": "Jul 25, 2019 11:55:04 AM",
     "crawled": "Jul 22, 2019 4:06:25 PM",
     "content": "<div>\n <h3>Job Description</h3>\n <div>\n  <p>Every ten years, the U.S. Census Bureau is responsible for conducting the nationwide census.While the next census itself will be taken in 2020, the Census Bureau is already recruiting to fill important positions. With the help of organizations like yours, we plan to recruit and employ thousands of Americans as Census Takers throughout the country. Since most communities are best known by the people who live and work there, you can help us and help your community by getting the word out about 2020 Census jobs in your community.</p>\n  <p> </p>\n  <p>The US Census Bureau is recruiting for Census Takers in Duluth, MN. A Census Taker works in the field. Some field positions require employees to work during the day to see addresses on buildings. Other field positions require interviewing the public, so employees must be available to work when people are usually at home, such as in the evening and on weekends.</p>\n  <p> </p>\n  <p><strong>Pay Rate: $14.00 Hourly </strong></p>\n  <p> </p>\n  <p>So, you re ready to work on the 2020 Census?</p>\n  <p> </p>\n  <p>A Census Taker works in the field. Some field positions require employees to work during the day to see addresses on buildings. Other field positions require interviewing the public, so employees must be available to work when people are usually at home, such as in the evening and on weekends.</p>\n  <p> </p>\n  <p>The first step is to complete the online job application at <span>2020Census.gov/jobs.This</span> process should take about 30 minutes and will include some assessment questions about your education, work, and other experience.</p>\n  <p> </p>\n  <p><strong>Here s what you ll need to get started:</strong></p>\n  <ul>\n   <li>Social Security number</li>\n   <li>Home address (physical location and mailing address)</li>\n   <li>Email address and phone number</li>\n   <li>Date and place of birth</li>\n  </ul>\n  <p>In addition, if you re a veteran who would like to claim veterans preference, you will need supporting documentation. For more information, visit the U.S. Office of Personnel Management Veterans Preference page.</p>\n  <p> </p>\n  <p>If you run into issues during the application process, you can call 1-855-JOB-2020 (1-855-###-####) and select option 1 for technical assistance or option 3 to speak with someone at your area census office. You can also refer to the frequently asked questions at the bottom of this page and on our FAQ page.</p>\n  <p> </p>\n  <p><strong>Equal Employment Opportunity Policy</strong></p>\n  <p> </p>\n  <p>The United States Government does not discriminate in employment on the basis of race, color, religion, sex (including pregnancy and gender identity), national origin, political affiliation, sexual orientation, marital status, disability, genetic information, age, membership in an employee organization, retaliation, parental status, military service, or other non-merit factor.</p>\n </div>\n <h3>Company Description</h3>\n <div>\n  Our Mission\n  <br>The Census Bureau's mission is to serve as the nation s leading provider of quality data about its people and economy.\n  <br>\n  <br>Our Authority\n  <br>The Census Bureau operates under Title 13 and Title 26 of the U.S. Code.\n  <br>\n  <br>Our Goal\n  <br>Our goal is to provide the best mix of timeliness, relevancy, quality and cost for the data we collect and services we provide.\n  <br>\n  <br>The Census Bureau is dedicated to providing current facts and figures about America s people, places, and economy.\n </div>\n</div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "lRySOLzbQde0-SjY38wC4g",
-    "url": "https://remote.co/job/fact-checker-4/",
-    "title": "Fact Checker",
-    "tags": [
-      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
-      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
-      "REMOTE1/100",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/America"
-    ],
-    "tagsNames1": [
-      "American time zones",
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "Complexly",
-      "sameAs": "https://complexly.com/"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Jul 21, 2019 6:55:10 PM",
-    "validThrough": "Jul 28, 2019 6:55:10 PM",
-    "crawled": "Jul 21, 2019 7:31:33 PM",
-    "content": "<h3>Fact Checker at <span>Complexly</span></h3>\n<div>\n <span><i></i> Remote</span> | \n <span> Entry-level </span> | \n <span> Freelance </span> | \n <span> Part-time </span>\n</div>\n<div> \n <p>The difference between fact and fiction can seem a little blurred. We need people who can decipher scientific truth from science fiction in our video scripts.</p>\n <p>We make videos that help our audiences develop a nuanced and complex view of the world around us. On our channels, SciShow, SciShow Space, and SciShow Psych, we do this by enthusiastically sharing science information for everyone to understand and enjoy, reaching over 7 million subscribers.</p>\n <p>As our freelance fact checker, you’ll be asked to read our scripts before they get sent to our studio, make sure all the info is right and communicated correctly, cite reliable sources, and call out any grey areas to your editor. Ideally, you’re already well-versed in identifying what’s correct from incorrect quickly and know how to pinpoint questionable content efficiently.</p>\n <p><strong>More details on the position:</strong></p>\n <ul>\n  <li><strong>Job Title:</strong> Fact-Checker</li>\n  <li><strong>Status: Freelance</strong></li>\n  <li><strong>Reports to:</strong> Editors</li>\n  <li><strong>Rate of Pay:</strong> $18/hr (avg 20-30 hrs per week)</li>\n  <li><strong>Location: Remote in USA</strong></li>\n </ul> \n</div>\n<div> \n <a href='https://docs.google.com/forms/d/e/1FAIpQLSfuAEU-RktG925Iihz5C1q7EWXrx15TjUS635UiYNGnMe-RHg/viewform' rel='nofollow'>Apply for job</a> \n</div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "0RwApSeNTuOtUdeparx0gg",
-    "url": "https://remote.co/job/family-practice-internal-medicine-coding-specialist/",
-    "title": "Family Practice – Internal Medicine Coding Specialist",
-    "tags": [
-      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
-      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
-      "DBG_TECH1:k/t/w:windows/dotnet/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=8, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/dotnet",
-      "TITLE1/unknown",
-      "TZ/America"
-    ],
-    "tagsNames1": [
-      "American time zones",
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "dotnet"
-    ],
-    "hiringOrganization": {
-      "name": "Aviacode",
-      "sameAs": "https://www.aviacode.com/"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Jul 21, 2019 6:25:36 PM",
-    "validThrough": "Jul 28, 2019 6:25:36 PM",
-    "crawled": "Jul 21, 2019 7:31:33 PM",
-    "content": "<h3>Family Practice – Internal Medicine Coding Specialist at <span>Aviacode</span></h3>\n<div>\n <span><i></i> Remote</span> | \n <span> Part-time </span>\n</div>\n<div> \n <p><strong>Job Locations: US-Virtual/Remote</strong></p>\n <p><strong>Job ID:&nbsp;</strong>2019-1740</p>\n <p><strong># of Openings:&nbsp;</strong>3</p>\n <p><strong>Category:&nbsp;</strong>Medical Coding</p>\n <p><strong>Minimum Hours:&nbsp;</strong>20</p>\n <p><strong>Overview</strong></p>\n <p><strong>Profee Family Practice/Internal Medicine Coding Specialist</strong></p>\n <p>Sizzle into Summer with a new career at Aviacode!</p>\n <p>Aviacode is nationally recognized as one of the top medical coding companies in KLAS and Black Book Market Research surveys. Here is your opportunity to be part of this exciting team. We have an immediate need for profee family practice and internal medicine Coding Specialists. This is a full-time, remote position 40 hours per week, employee status and benefit eligible.</p>\n <p><strong>Responsibilities</strong></p>\n <p>This position will be responsible for coding family practice and internal medicine including: labs, vaccinations, sleep studies, neurology, and pulmonary. Coders will be responsible for reviewing charts, coding appropriate diagnoses codes and ensuring high quality standards are achieved.</p>\n <p><strong>Qualifications</strong></p>\n <ul>\n  <li>Must be certified, AAPC -CPC or equivalent preferred.</li>\n  <li>At least 3 years coding family practice and internal medicine required</li>\n  <li>Minimum of 2 years EM coding experience</li>\n  <li>Demonstrated ability to maintain high quality standards of 95% or greater</li>\n  <li>Proficient in utilizing technology (computer, VPN, MS Office, coding software) to perform responsibilities</li>\n  <li>Strong verbal and written communication skills</li>\n  <li>Must have ICD-10 coding experience and have completed an ICD-10 course</li>\n  <li>Must have high speed Internet access, a<strong>&nbsp;Professional Windows 10 computer and dual monitors.</strong></li>\n </ul>\n <p>Must pass candidate assessment testing with a minimum score of 80%.<strong>&nbsp;This is a virtual/work from home position.</strong></p>\n <p>Aviacode provides equal employment opportunities (EEO) to all employees and applicants for employment without regard to race, color, religion, sex, national origin, age, sexual orientation, gender identification, disability, or genetics. In addition to federal law requirements, Aviacode complies with applicable state and local laws governing nondiscrimination in employment in every location in which the company has facilities. This policy applies to all terms and conditions of employment, including recruiting, hiring, placement, promotion, termination, layoff, recall, transfer, leaves of absence, compensation and training. Aviacode expressly prohibits any form of workplace harassment based on protected classes. Improper interference with the ability of Aviacode’s employees to perform their job duties may result in discipline up to and including discharge.</p> \n</div>\n<div> \n <a href='https://careers-aviacode.icims.com/jobs/1740/profee-family-practice-internal-medicine-coding-specialist---per-diem/job' rel='nofollow'>Apply for job</a> \n</div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
