json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,65 @@
 {
  "items": [
   {
+    "id": "TFZ1HvgKSMGNSvdq7J5D6w",
+    "url": "https://jobs.github.com/positions/f9205737-2ce2-4acf-a469-87640d5941da",
+    "title": "Senior Software Engineer (iOS)",
+    "tags": [
+      "DBG:surround``4N( OR(virtual,distribut,scatter), OR(compani,team,OR(organ,organis)))",
+      "DBG_TECH1:k/t/w:ios/apple/10",
+      "DBG_TECH1:k/t/w:ios/mobile/10",
+      "DBG_TECH1:k/t/w:less/frontend/5",
+      "DBG_TECH1:k/t/w:macos/apple/2",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:ruby-on-rails/ruby/8",
+      "DBG_TECH1:k/t/w:ruby/ruby/2",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=26, go=0, nodejs=0, bigdata-ml=0, ruby=10, apple=20, java=0, gamedev=0, php=0, embedded=0, frontend=5}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 27, 2019 2:12:25 PM",
+    "validThrough": "Oct 4, 2019 2:12:25 PM",
+    "crawled": "Sep 27, 2019 3:06:35 PM",
+    "content": "At Impero, we've been in Education Technology since 2002, building systems to keep children and young people safe and make them successful. We are passionate about protecting every learner, their wellbeing and their future through managing, supporting and monitoring. We do this by working closely with educators around the world. With recent new leadership, we're building a distributed UK-based engineering team to reimagine our technology platform. We are first and foremost looking for best of breed developers who are positive and ambitious and who can demonstrate strong engineering principles. Whether you’ve been developing for two years or ten we may have a role for you. Our product vision is exciting and the roadmap ahead is challenging. Our team is growing in a way that will allow you to play to your strengths: whether enjoying data modelling and analysis, or building huge new feature sets. We believe in creating careers, not jobs. During your time with us you’ll receive regular, honest, helpful feedback, with a clear progression path. We’ll be looking for ways to grow your expertise, and we will provide opportunities for your professional development. We’re a distributed team, who put energy into speaking every day, and we arrange regular meetings both by department and as a company. In the first few months as you get to know the team and products, we'll bring you into our Nottingham office as needed, but our team is distributed-first: doing your best work isn't dependent on you being in a certain place. Our web platform - less than two years old - is built exclusively in Ruby on Rails with interlinking native device clients, communicating through standard web protocols. At Impero, we believe we're creating something special, and we'd love for you to join us.Senior Software Engineer (iOS)RoleThe successful candidate will take responsibility for working as a software engineer within an agile team to develop the company’s iOS device client applications.Responsibilities Operational* Work within a cross-functional software team (consisting of Software Engineers, Cloud Infrastructure Engineers and testers) to develop device clients for iOS devices.* Take responsibility for the quality and speed of your own deliverables.* Perform automated and manual testing on your own work.* Assist other members of the engineering team where required.CharacteristicsEssential* Experience of working in a distributed workforce in an agile development team.* At least 3 years of commercial experience (or equivalent) in Objective-C and/or Swift development.* Experience in developing for macOS or iOS, with knowledge of platform APIs.* At least 3 years of experience in writing automated tests.* Experience of integrating device applications with web applications.* Understanding of programming, networking and information security principles.* Enthusiasm for understanding technical ideas and explaining them clearly to other members of the team.* A strong standard of spoken and written English.Desirable* Experience of working with provisioning profiles and MDM services.",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "NAtP3rU7RMK5dnPnTUavMw",
     "url": "https://berlinstartupjobs.com/engineering/senior-ios-engineer-idagio/",
     "title": "Senior iOS Engineer // Idagio",
@@ -2226,53 +2285,6 @@
     "validThrough": "Aug 5, 2019 11:16:36 AM",
     "crawled": "Jul 29, 2019 12:06:22 PM",
     "content": "<h3> Software Engineer, iOS - Remote </h3><div><div><h4></h4></div><div><span>At Numbrs, our engineers don’t just develop things – we have an impact. We change the way how people are managing their finances by building the best products and services for our users.&nbsp;</span></div><div><br></div><div>Numbrs engineers are innovators, problem-solvers, and hard-workers who are building solutions in big data, mobile technology and much more. We look for professional, highly skilled engineers who evolve, adapt to change and thrive in a fast-paced, value-driven environment.</div><div><br></div><div>Join our dedicated technology team that builds massively scalable systems, designs low latency architecture solutions and leverages machine learning technology to turn financial data into action. Want to push the limit of personal finance management? Join Numbrs.</div><div><br></div><div><b>Job Description</b></div><div></div><div><span>You will work on the development of user facing features of product such as our real time in-app Chat, the Money Store, and Video Calling in a team of highly skilled engineers using cutting edge technologies.&nbsp;<br></span></div><div>You will contribute to the evolution of the iOS platform by experimenting with new technologies, developing frameworks and tools, and working on proof of concepts.</div><div><br></div><div><h5><span>Key Qualifications</span></h5></div><ul><li>extensive experience building native iOS applications</li><li>very good knowledge of Swift and Objective-C</li><li>passion for the iOS platform</li><li>experience with REST APIs, JSON, and Websocket</li><li>excellent troubleshooting and creative problem-solving abilities</li><li>excellent written and oral communication in English and interpersonal skills</li></ul><div><h5><br></h5></div><div><h5>Ideally, candidates will also have</h5></div><ul><li>experience with Core Data</li><li>experience with CI/CD toolchain products like Jira, Stash, Git, and Jenkins</li><li>backend development experience in any programming language</li><li>experience with encryption and cryptography standards</li></ul><div><h5><br></h5></div><div><h5>Location: Remote<br></h5></div><div></div><div><h4><span></span></h4></div><div><h5><span></span></h5></div></div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "9tNfOlCET9Kw1yIKyc6S_Q",
-    "url": "https://jobmote.com/job/52663/remote-container-docker-openshift-engineer/",
-    "title": "REMOTE- Container/Docker/OpenShift Engineer",
-    "tags": [
-      "DBG:surround``2W( OR(100,fulli,entir), remot)",
-      "DBG_TECH1:k/t/w:macos/apple/2",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [],
-    "tagsNames2": [
-      "apple"
-    ],
-    "hiringOrganization": {
-      "name": "Technology Ventures",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Jul 27, 2019 10:07:22 PM",
-    "validThrough": "Jul 30, 2019 10:07:22 PM",
-    "crawled": "Jul 28, 2019 3:06:25 AM",
-    "content": "<div>\n <p> <strong>Container/Docker/Kubernetes Engineer</strong> <br><strong>McLean, VA</strong> <br><strong>2 Months Onsite and then 100% Remote</strong></p> \n <p> <strong> Infrastructure/Cloud/Container Engineer Specialist</strong> <br></p> \n <ul>\n  <li> Are you someone who thrives in a fast-paced, system engineering environment? Do you have a passion for solving problems with automation/scripting and a thorough understanding of Unix, Openshift/Kubenetes and AWS? If you have proven engineering experience, know what is takes to implement solutions in a complex environment and love being part of a dedicated team, we are your next destination employer! Apply to join Freddie Mac s Unix Engineering team as our newest Container Engineer Specialist. </li>\n </ul>\n <p> <strong> Container (Openshift/Kubenetes) Engineering</strong> <br></p> \n <ul>\n  <li> Develop scripts to automate operational tasks </li> \n  <li> Experience in full life cycle engineering and support of a container environment (Openshift/Kubenetes) </li> \n  <li> Experience with Amazon Web Services (AWS) or other cloud provider </li> \n  <li> Proven expertise in application containerization management with Openshift/Kubenetes </li> \n  <li> Working experience with DevOps or Agile processes </li> \n  <li> In-depth knowledge of best practices around Docker/Containerization </li> \n  <li> Checking status of environments and individual tools </li> \n  <li> Build and manage Docker baseline images </li> \n  <li> Good knowledge of the core service needed for the application (ex: TAM, AD, DB, CMDB, Monitoring etc.) </li>\n </ul>\n <p> <strong> Systems Operations Support</strong> <br></p> \n <ul>\n  <li> Excellent knowledge of and experience with the Red Hat Enterprise Linux (RHEL) operating system, system configuration, and administration </li> \n  <li> Work on production related issues. Providing resolutions to an extensive range of complicated problems. Solutions are innovative, thorough, and practicable. </li> \n  <li> Identify, analyze, fix, and determine root cause, follow-up and coordinate changes to resolve complex problems involving hardware, software, networking and applications. </li> \n  <li> Be part of the escalation team for on-call rotation and weekend activities as required. </li> \n  <li> Write technical documentation, operational procedures, systems documentation and Incident and problem communications and reporting. </li> \n  <li> Assist with the performance analysis of existing applications and ensuring that the system is consistent with ongoing need. </li> \n  <li> Possessing strong network knowledge and skilled in network protocols such as TCP/IP and DNS, DHCP. </li>\n </ul>\n <p> <strong> Project/Customer Support</strong> <br></p> \n <ul>\n  <li> Represents the organization as the principal customer contact and often performs a project leadership role for the team. Interacts with senior customer personnel on significant technical matters frequently requiring coordination across organizational lines. </li> \n  <li> Works under limited direction independently determines and develops approach to solutions. Work is evaluated upon completion for quality and adequacy in satisfying objectives. </li>\n </ul>\n <p> <strong> QUALIFICATIONS </strong> <br></p> \n <ul>\n  <li> Typically has 5 - 7 years related experience in Unix System administration </li> \n  <li> At least 2 years of experience in Openshift/Kubenetes AND/OR Kubernetes cluster </li>\n </ul>\n <p> <strong> EDUCATION</strong> <br></p> \n <ul>\n  <li> College STEM Degree or equivalent experience; advanced studies/degree preferred. </li>\n </ul>\n <p> <strong> REQUIRED SKILLS</strong> <br></p> \n <ul>\n  <li> Ability to work with and collaborate across the teams </li> \n  <li> Ability to mentor and empower junior technical staff </li> \n  <li> Ability to develop mutually beneficial relationships inside and outside of the division </li> \n  <li> Ability to work independently with customers to complete tasks assigned to successfully support deployments. </li>\n </ul>\n <p> <strong> PREFERRED SKILLS </strong> <br></p> \n <ul>\n  <li> RedHat Certifications </li> \n  <li> AWS Certifications </li> \n  <li> Scripting / Programming </li>\n </ul>\n <p> <strong> NOTE</strong> <br></p> \n <ul>\n  <li> The applicant must have a developer s mindset to solving engineering problems and must possess strong troubleshooting skills. </li>\n </ul> - provided by Dice\n</div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
